[package]
name = "rustyscript-book-test"
authors = ["@rscarson"]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
repository = "https://github.com/rscarson/rustyscript"

[dependencies]
reqwest = { version = "=0.12.8", default-features = false, features = ["blocking", "rustls-tls"] }
rustyscript = { path = "../", features = ["node_experimental", "extra_features"] }
anyhow = "1.0.93"
comrak = "0.29.0"
mdbook = "0.4.42"
url = "^2.4"